--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>SOMETHING</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Raleway&family=Roboto:wght@300&display=swap">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="center">
-      <div id="area">
+    <div class="row">
+      <div id="area" class="col-6">
         <span>S</span>
         <span>O</span>
         <span>M</span>
@@ -20,12 +21,15 @@
         <span>N</span>
         <span>G</span>
         <span>!</span>
-        <img id="image-output"></img>
-        <p class="description">TTURN YOUR IMAGE INTO TELEGRAM STICKER</p>
+        <p class="description">TURN YOUR IMAGE INTO TELEGRAM STICKER</p>
+        <img id="stock-image"/>
+        <input type="file" name="image" id="image-input" accept=".png">
+      </div>
+      <div class="col-6">
         <div id="elements-area">
           <label id="image-input-label" for="image-input" class="base-button">IMAGE GOES HERE</label>
         </div>
-        <input type="file" name="image" id="image-input" accept=".png">
+        <img id="image-output"/>
       </div>
     </div>
   </body>
