add different methods

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,15 @@
               Pack name:
               <input type="text" id="pack-input" value="MyPack" class="txt-field">
             </label>
+            <label class="txt-input">
+              Method:
+              <select id="method-input">
+                <option value="PRESERVE_DIM">preserve</option>
+                <option value="SQUARE">square</option>
+                <option value="SQUEEZE">squeeze</option>
+              </select>
+            </label>
+
             <label id="image-input-label" for="image-input" class="base-button" >IMAGE GOES HERE</label>
             <input type="file" name="image" id="image-input" value="image.png" accept=".png">
           </form>
